--- a/recruit-gui/src/app/listing/listing.component.css
+++ b/recruit-gui/src/app/listing/listing.component.css
@@ -4,80 +4,6 @@
 	padding: 10px;
 }
 
-.listing-step-content {
-	margin-top: 50px;
-	margin-left: 50px;
-}
-
-.a-table-cell {
-	display: table-cell;
-}
-
-.textarea-mp-desc{
-	height:150px;
-}
-
-.text-area-listing {
-	height: 260px;
-	width: 100%;
-}
-
-.checkbox-ctrl {
-	margin-right: 5px;
-}
-
-.radio-button {
-	margin-right: 5px;
-}
-
-.radio-button_label {
-	margin-right: 10px;
-}
-
-.listing-table {
-	margin-top: 20px;
-	vertical-align: middle;
-}
-
-.listing-tab-col {
-	border: 1px black solid;
-	background-color: #ffffff;
-	font-size: x-small;
-	text-align: center;
-	padding: 5px;
-}
-
-.bg-tab-hdr {
-	border: 1px black solid;
-	background: #6c757d;
-	color: #ffffff;
-	font-size: x-small;
-	white-space: nowrap;
-	padding: 5px;
-	margin: 5px;
-	text-align: center;
-	padding-left: 5px;
-	padding-right: 5px;
-	min-width: 50px;
-}
-
-.listing-nav {
-	cursor: pointer;
-	color: blue;
-	font-weight: bold;
-	margin-left: 20px;
-}
-
-.listing-nav-disabled {
-	color: grey;
-	font-weight: bold;
-	margin-left: 20px;
-}
-
-.listing-tab-row:hover {
-	cursor: pointer;
-}
-
 .listing-view-title {
 	margin-top: 20px;
 	color: #6A5ACD;
@@ -89,7 +15,7 @@
 }
 
 .site-header {
-	margin-top: 50px;
+	margin-top: 20px;
 	text-align: center;
 }
 
@@ -109,6 +35,15 @@
 	display: inline-block;
 	vertical-align: top;
 	cursor: pointer;
+}
+
+.listing-title {
+    font-weight: 700;
+    width: 100%;
+    padding-top: 0;
+    padding-bottom: 0;
+    min-width: 100%;
+    text-align: center;
 }
 
 .listing-country {
@@ -140,58 +75,6 @@
 	display: inline-block;
 	margin-right: 5px;
 	margin-top: 8px;
-}
-
-.inactive-filter {
-	height: 20px;
-	width: 20px;
-	background-color: grey;
-	border-radius: 50%;
-	display: inline-block;
-	margin-right: 5px;
-	margin-top: 8px;
-	cursor: pointer;
-}
-
-.listing-title {
-	font-weight: bold;
-	width: 100%;
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-width: 100%;
-	text-align: center;
-}
-
-.contact-recruiter-textarea {
-	width: 100%;
-	height: 200px;
-	margin-top: 20px;
-}
-
-.email-label {
-	border-bottom: 2px solid black;
-	margin-top: 10px;
-}
-
-.email-input {
-	min-width: 33%;
-}
-
-.feedbackBox {
-	width: 200px;
-	height: 350px;
-}
-
-.filter-close-box {
-	padding: 10px;
-	cursor: pointer;
-	font-size: 20px;
-	font-weight: bold;
-	text-align: right;
-}
-
-.listing-view {
-	margin-left: 30px;
 }
 
 .filters {
@@ -326,8 +209,38 @@
 }
 
 .clipboard-btn{
-		width:100%;
-	}
+	width:100%;
+}
+
+.toggle-options{
+	float:right;
+	margin-right:20px;
+	cursor:pointer
+}
+
+.statistics-table{
+	width:80%;
+	margin:auto;
+	height:50px;
+	margin-top:10px;
+	background:#e8e8e8;
+}
+
+.statistics-table-pane-left{
+	float:left;
+	padding:10px;
+	min-width:50%
+}
+
+.statistics-table-pane{
+	float:left;
+	padding:10px;
+}
+
+.stat-option-bar{
+	max-width:80%;
+	padding:5px;
+}
 
 @media ( max-width :700px) {
 	.listing-pane {
@@ -372,9 +285,22 @@
 	}
 	
 	.share-post-clipboard{
-	margin: 0 auto;
-	width:250px;
-	height:100px;
+		margin: 0 auto;
+		width:250px;
+		height:100px;
+	}
+	
+	.statistics-table{
+		width:100%;
+	}
+	
+	.statistics-table-pane{
+		width:100%;
+	}
+	
+	.stat-option-bar{
+		max-width:160px;
+		padding:5px;
 	}
 	
 }
