--- a/recruit-gui/src/app/listing/listing.component.css
+++ b/recruit-gui/src/app/listing/listing.component.css
@@ -77,6 +77,17 @@
 	margin-top: 8px;
 }
 
+.inactive-filter {
+	height: 20px;
+	width: 20px;
+	background-color: grey;
+	border-radius: 50%;
+	display: inline-block;
+	margin-right: 5px;
+	margin-top: 8px;
+	cursor: pointer;
+}
+
 .filters {
 	border-bottom: 1px solid black;
 	margin-bottom: 10px;
