--- a/recruit-gui/src/app/recruiter-listings/recruiter-listings.component.css
+++ b/recruit-gui/src/app/recruiter-listings/recruiter-listings.component.css
@@ -3,11 +3,12 @@
 	width: 90%;
 	padding: 10px;
 }
- 
+
+/** 
 .listing-step-content{
 	width:90%;
 }
-
+*/
 .text-area-listing{
 	height:260px;
 	width:100%;
@@ -162,6 +163,115 @@ textarea {
 	width:100%;
 }
 
+.listing-pane {
+	width: 95%;
+	margin: 0 auto;
+	padding-left: 3%;
+}
+
+.job-post {
+	width: 22%;
+	height: 150px;
+	padding: 20px;
+	background: #e8e8e8;
+	margin-top: 15px;
+	margin-right: 3%;
+	display: inline-block;
+	vertical-align: top;
+	cursor: pointer;
+}
+
+.listing-title {
+    font-weight: 700;
+    width: 100%;
+    padding-top: 0;
+    padding-bottom: 0;
+    min-width: 100%;
+    text-align: center;
+}
+
+.listing-country {
+	display: table;
+	margin: 0 auto;
+	padding-top: 30px;
+}
+
+.listing-country {
+	display: table;
+	margin: 0 auto;
+	padding-top: 30px;
+}
+
+.job-post-contract-type {
+	text-align: center;
+	margin-top: 10px;
+}
+
+.listing-views{
+	color:green;
+	font-weight:bold;
+	text-align:center;
+}
+
+.add-container{
+	width:48%;
+	margin:1%;
+	float:left;	
+	min-height:460px;
+	background:#e8e8e8;
+}
+
+.addListingDesc {
+  height: 400px;
+  margin:auto;
+}
+
+.add-container-mini{
+	width:48%;
+	margin:1%;
+	float:left;	
+	min-height:270px;
+}
+
+.add-container h2{
+	width:100%;
+	height:50px;
+	background:#6c757d;
+	padding:5px;
+	padding-left:10px;
+	
+}
+
+.content-container{
+	padding:10px;
+}
+
+.description-container{
+	width:98%;
+}
+
+.add-container input[type=text]{
+	width:100%;
+}
+
+.add-container select{
+	width:100%;
+}
+
+table{
+	width:100%;
+}
+
+.addSkillBtn{
+	margin-top:10px;
+	float:right;
+}
+
+.listing-add-footer{
+	clear:both;
+	padding-bottom:50px;	
+}
+
 /*mobile*/
 @media (max-width: 768px) {
 	.textarea-mp-desc{
@@ -173,4 +283,28 @@ textarea {
 	.mp-box-table{
 		width:90%;
 	}
+	
+	.listing-pane {
+		width: 100%;
+		padding-left: 0%;
+		margin-left: 0%;
+	}
+	
+	.job-post {
+		min-width: 100%;
+	}
+	
+	.country-flag{
+		height:25px;
+		width:30px;
+		padding-left:0px;
+		margin-left:0px;
+		margin-bottom:5px;
+		background-position:0%;
+	}
+	
+	.add-container{
+		width:100%;
+	}
+	
 }
