--- a/recruit-gui/src/app/suggestions/searchbar/searchbar.component.html
+++ b/recruit-gui/src/app/suggestions/searchbar/searchbar.component.html
@@ -77,7 +77,7 @@
 					<td *ngIf="showCountryFilters" class="sugg-srch-bdy country-filters">
 						<p class="toggle-filter-option" (click)="switchCountriesFilterView('')">{{'Hide' | translate}}..</p>
 						<div class="country-selections">
-							<span *ngFor="let supportedCountry of supportedCountries" class="country-filter country-selected-{{includeResultsForCountry(supportedCountry.iso2Code)}}" (click)="toggleCountrySelection(supportedCountry.iso2Code)">
+							<span *ngFor="let supportedCountry of supportedCountries" class="country-filter country-selected-{{includeResultsForCountry(supportedCountry.name)}}" (click)="toggleCountrySelection(supportedCountry.name)">
 								<mat-icon title="{{supportedCountry.name}}">
 									<span class="flag-icon flag-icon-{{supportedCountry.iso2Code}} flag-icon-med"></span>
 								</mat-icon>
