--- a/recruit-gui/src/app/listing/listing.component.css
+++ b/recruit-gui/src/app/listing/listing.component.css
@@ -22,7 +22,7 @@
 .listing-pane {
 	width: 95%;
 	margin: 0 auto;
-	padding-left: 3%;
+	padding-left:0px;
 }
 
 .job-post {
@@ -229,28 +229,27 @@
 	cursor:pointer
 }
 
-.statistics-table{
-	width:80%;
-	margin:auto;
-	height:50px;
-	margin-top:10px;
-	background:#e8e8e8;
-}
-
-.statistics-table-pane-left{
-	float:left;
-	padding:10px;
-	min-width:50%
-}
-
-.statistics-table-pane{
-	float:left;
-	padding:10px;
-}
-
 .stat-option-bar{
 	max-width:80%;
 	padding:5px;
+}
+
+.listing-stats-pane{
+	margin-bottom:20px;
+}
+
+.listing-pane-left{
+	float:left;
+	padding:10px;
+	margin:1px;
+	width:24%;
+	max-width:24%;
+}
+
+.listing-pane-right{
+	float:left;
+	padding:10px;
+	width:75%;
 }
 
 @media ( max-width :700px) {
@@ -312,6 +311,64 @@
 	.stat-option-bar{
 		max-width:160px;
 		padding:5px;
+	}
+	
+	.listing-stats-pane{
+		display:none;
+	}
+	
+	.listing-pane-right{
+		width:100%;
+	}
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	.search-filter-pane{
+		margin-left:0px;
+	}
+	
+	
+	
+	.sugg-srch-ctry-chkbox{
+		display:inline-block;
+		margin:0;
+		padding:0;
+		width:100%;
+	}	
+	
+	.sugg-srch-job-title-name{
+		margin-right:20px;
+		min-width:0px;
+	}
+
+	.geo-code-filter{
+		width:100%;	
+	}
+	
+	.search-filter-pane{
+		margin-left:1%;
+		margin-right:1%;
+		width:98%;
+	}
+	
+	.filters-collapse-options{
+		margin-left:5px;
+		color:#6A5ACD;
+		font-weight:bold;
+		cursor:pointer;
 	}
 	
 }
