--- a/recruit-gui/src/app/listing/searchbar/searchbar.component.html
+++ b/recruit-gui/src/app/listing/searchbar/searchbar.component.html
@@ -54,19 +54,19 @@
 					<td class="sugg-srch-bdy">
 						<select class="contract-type" formControlName="contractType">
 							<option value="BOTH">{{'arenella-suggestions-both' | translate}}</option>
-							<option value="CONTRACT">{{'arenella-suggestions-contract' | translate}}</option>
-							<option value="PERM">{{'arenella-suggestions-permanent' | translate}}</option>
+							<option value="CONTRACT_ROLE">{{'arenella-suggestions-contract' | translate}}</option>
+							<option value="PERM_ROLE">{{'arenella-suggestions-permanent' | translate}}</option>
 						</select>
 					</td>
 				</tr>
 				<tr>
 					<td class="sugg-srch-hdr">{{'arenella-listing-contract-age' | translate}}</td>
 					<td class="sugg-srch-bdy">
-						<select class="contract-type" formControlName="contractType">
-							<option value="BOTH">{{'arenella-listing-contract-all' | translate}}</option>
-							<option value="CONTRACT">{{'arenella-listing-contract-today' | translate}}</option>
-							<option value="PERM">{{'arenella-listing-contract-week' | translate}}</option>
-							<option value="PERM">{{'arenella-listing-contract-month' | translate}}</option>
+						<select class="contract-type" formControlName="maxAgeOfPost">
+							<option value="ALL">{{'arenella-listing-contract-all' | translate}}</option>
+							<option value="TODAY">{{'arenella-listing-contract-today' | translate}}</option>
+							<option value="THIS_WEEK">{{'arenella-listing-contract-week' | translate}}</option>
+							<option value="THIS_MONTH">{{'arenella-listing-contract-month' | translate}}</option>
 						</select>
 					</td>
 				</tr>		
