--- a/recruit-gui/src/app/listing/listing.component.html
+++ b/recruit-gui/src/app/listing/listing.component.html
@@ -44,7 +44,7 @@
 								</td>
 							</tr>
 							<tr *ngFor="let stat of stats.functionStats">
-								<td style="width:150px;font-size:14px;">{{(stat.function+"_SHORT") | translate}}</td>
+								<td style="width:150px;font-size:14px;">{{(stat.function) | translate}}</td>
 								<td style="padding-left:5px;width:180px;">
 									<div class="stat-option-bar" [ngStyle]="{'width':(stat.percentageOfTotal *4)+'px','background':'orange', 'max-width':'180px'}">
 									</div>
