front end layout fix and search by candidateId bugfix

--- a/recruit-gui/src/app/listing/listing.component.html
+++ b/recruit-gui/src/app/listing/listing.component.html
@@ -74,7 +74,7 @@
 								<div>
 									<a href="{{getExternalUrl(listing.listingId)}}"></a>
 								</div>
-						`	</div>
+							</div>
 						</div>
 					</div>
 					
